--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.6"
+        "livewire/volt": "^1.6",
+        "ralphjsmit/laravel-seo": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
