--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.6",
-        "ralphjsmit/laravel-seo": "^1.4"
+        "livewire/volt": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.14",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
