TEST laravel auto deploy 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         server: ftp.sibanyu.com
         username: u484476812.sibanyu_secret
         password: 2UfS2kgKU$XDqgQ
-        server-dir: /home/u484476812/domains/sibanyu.com/sibanyu
+        server-dir: /home/u484476812/domains/sibanyu.com/sibanyu/
